--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "@11ty/eleventy": "^0.11.1",
+    "http-server": "^0.12.3",
+    "sync-request": "^6.1.0"
   },
   "engines": {
     "node": "12.x"
