--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
+  "name": "jsonsite",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "description": "Turns a JSON file into a website",
+  "private": true,
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "@11ty/eleventy": "^0.11.1",
-    "http-server": "^0.12.3",
-    "sync-request": "^6.1.0"
+    "ejs": "^3.1.5",
+    "html-minifier": "^4.0.0",
+    "tamper": "^1.1.0"
   },
   "engines": {
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://glitch.com/edit/#!/jsonsite"
   },
   "license": "MIT",
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "express",
+    "ejs",
+    "json",
+    "markdown"
   ]
 }
