🏝🐕 Checkpoint ./engine.js:8045597/234 ./config.js:8045597/76 ./server.js:8045597/16 ./sites.js:8045597/169 ./package.json:8045597/1126

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.17.1",
     "ejs": "^3.1.5",
     "html-minifier": "^4.0.0",
-    "tamper": "^1.1.0"
+    "tamper": "^1.1.0",
+    "sync-request": "^6.1.0"
   },
   "engines": {
     "node": "12.x"
