--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "ejs": "^3.1.5",
     "html-minifier": "^4.0.0",
     "tamper": "^1.1.0",
     "sync-request": "^6.1.0",
-    "markdown-it": "^12.0.1"
+    "markdown-it": "^12.0.1",
+    "nunjucks": "^3.2.2"
   },
   "engines": {
     "node": "12.x"
