--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tamper": "^1.1.0",
     "sync-request": "^6.1.0",
     "markdown-it": "^12.0.1",
-    "nunjucks": "^3.2.2"
+    "nunjucks": "^3.2.2",
+    "siimple": "^3.3.1"
   },
   "engines": {
     "node": "12.x"
