--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node engine.js && node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
