--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app && http-server pages -p 3000"
   },
   "dependencies": {
-    "express": "^4.17.1",
     "html-minifier": "^4.0.0",
-    "tamper": "^1.1.0",
     "sync-request": "^6.1.0",
     "markdown-it": "^12.0.1",
     "nunjucks": "^3.2.2",
     "siimple": "^3.3.1",
-    "validator": "^13.1.17"
+    "validator": "^13.1.17",
+    "http-server": "^0.12.3"
   },
   "engines": {
     "node": "12.x"
